--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -35,4 +35,4 @@ jobs:
       run: ./gradlew publish
       env:
         USERNAME: ${{ github.actor }}
-        TOKEN: ${{ secrets.TOKEN_GITHUB }}
+        TOKEN: ${{ secrets.GITHUB_TOKEN }}
